fixing info and updating style - better contrast and font size

--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -8,7 +8,7 @@ $inactive-icon-color: #7F8FA4;
 $active-icon-color: #F1F6F7;
 
 $text-color: #F1F6F7;
-$inactive-text-color: #37647D;
+$inactive-text-color: #6c99b6;
 $hover-text-color: #6991AA;
 $hyperlink-text-color: #1D96B2;
 
